[tool.poetry]
name = "native-python-dhall"
version = "0.0.0"
description = "Fully native Python bindings for Dhall"
authors = ["wself <andreychertckov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
